# robot-prototype

./: .gitignore  README.md  controller.py
docs/: FEB8_SUCCESS_PLAN.md
fall-25-work/rl-training-mujoco/: train_ppo.py
fall-25-work/ros2_ws/install/: local_setup.sh  setup.sh
fall-25-work/ros2_ws/log/: latest_build
fall-25-work/ros2_ws/src/leg_controller/: CMakeLists.txt  package.xml
fall-25-work/ros2_ws/src/leg_controller/msg/: RemoteInput.msg
fall-25-work/ros2_ws/src/leg_controller/src/: joystick_handler.cpp
fall-25-work/ros2_ws/src/leg_controller/test/: joystick_test_node.cpp
fall-25-work/ros2_ws/src/simulation/: CMakeLists.txt  package.xml
fall-25-work/ros2_ws/src/simulation/launch/: view_leg.py
fall-25-work/zephyr_fw/: west.yml
fall-25-work/zephyr_fw/app/: CMakeLists.txt  prj.conf
fall-25-work/zephyr_fw/app/include/: motor_control.h  safety_monitor.h  state_machine.h
fall-25-work/zephyr_fw/app/src/: main.c  motor_control.c  safety_monitor.c  state_machine.c
feb8_demo/: check_g1_joints.py  test_g1_quick.py  test_g1_with_viewer.py
g1_manipulation/: env.py  test_env.py
image-processor/: capture_RGB.py  data_transfer.py  data_transfer_test.py  goat_metadata.json  main.py  metadata.json  preprocessing.py
rl-training-genesis/: go2_env.py  go2_eval.py  go2_train.py  trainingLegs_env.py  trainingLegs_train.py
rl-training-genesis/locomotion/balancing_ball/: balancing_ball_view.py  go2_balancingBall_kf_env.py  go2_balancingBall_kf_eval.py  go2_balancingBall_kf_train.py
rl-training-genesis/locomotion/balancing_ball/models/: ball.urdf
rl-training-genesis/locomotion/g1/: g1_locomotion_eval.py  g1_locomotion_kf_env.py  g1_locomotion_kf_train.py  g1_locomotion_rg_train.py
rl-training-genesis/locomotion/go2/basic/: go2_env.py  go2_eval.py  go2_steps_jb_env.py  go2_train.py
rl-training-genesis/locomotion/lite3/basic/: lite3_env.py  lite3_eval.py  lite3_train.py
rl-training-genesis/locomotion/lite3/models/urdf/: Lite3.urdf
rl-training-genesis/manipulations/g1/: README.md  __init__.py  test_env.py
rl-training-genesis/models/: g1_12dof.urdf
vla-research/docs/: FEB8_DEMO_GENESIS.md  README.md  vla_setup_short.md
vla-research/feb8_demo/: check_dex1_dataset.py  download_dataset.py  inspect_dataset_dims.py  test_reaching.py
vla-research/image-processor/: capture_RGB.py
